# Parralog

./: .gitignore  CMakeLists.txt  README.md
data/: log_10.ndjson
src/helpers/: p2_quantile_sketch.h  thread_pool.cpp  thread_pool.h
src/hpcae/: main.cpp
src/parralog/: main.cpp
src/tools/: p2_quantile_sketch.cpp  thread_pool.cpp
tools/: generate.cpp
